--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 h1 {
   color: Red;
 }
+
+.navbar {
+	display: flex;
+	justify-content: space-between;
+}
+
+.container {
+	display: flex;
+	justify-content: space-between;
+	border: 1px solid grey;
+}
+
+.players {
+	border: 1px solid grey;
+	margin: 3px;
+	flex: 1;
+}
+
+.leaderboard {
+	border: 1px solid grey;
+	margin: 3px;
+	flex: 1;
+}
+
+.current-games {
+	border: 1px solid grey;
+	margin: 3px;
+	flex: 1;
+}
+
+.recent-achievements {
+	border: 1px solid grey;
+	margin: 3px;
+	flex: 1;
+}
+
+
+.chat {
+	border: 1px solid grey;
+	margin: 3px;
+	flex: 1;
+}
