--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,6 @@ h1, h2, h3, h4, h5, h6, p, li {
 	background-color: var(--pagecolor);
 	display: flex;
 	justify-content: space-between;
-	border: 1px solid grey;
 	width: 100vw;
 	height: 100vh;
 	margin: 0;
@@ -41,28 +40,24 @@ h1, h2, h3, h4, h5, h6, p, li {
 
 .players {
 	background-color: var(--sectioncolor);
-	border: 1px solid grey;
 	margin: 3px;
 	flex: 1;
 }
 
 .leaderboard {
 	background-color: var(--sectioncolor);
-	border: 1px solid grey;
 	margin: 3px;
 	flex: 1;
 }
 
 .current-games {
-	background-color: var(--sectioncolor);
-	border: 1px solid grey;
+	background-color: var(--pagecolor);
 	margin: 3px;
 	flex: 1;
 }
 
 .recent-achievements {
 	background-color: var(--sectioncolor);
-	border: 1px solid grey;
 	margin: 3px;
 	flex: 1;
 }
@@ -70,7 +65,6 @@ h1, h2, h3, h4, h5, h6, p, li {
 
 .chat {
 	background-color: var(--sectioncolor);
-	border: 1px solid grey;
 	margin: 3px;
 	flex: 1;
 }
