Set up refresh, improved styling, improved leaderboard and status sections

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,14 +15,20 @@
 
 body {
 	margin: 0;
-	overflow-x: hidden;
+	min-height: 100vh;
 }
 
-h1, h2, h3, h4, h5, h6, p, li {
+h1, h2, h3, h4, h5, h6, li {
 	font-family: 'Arimo', sans-serif;
 	color: white;
 	margin: 0;
 	padding: 0;
+}
+
+p, th, td {
+	color: #C8C8C8;
+	font-weight: 400;
+
 }
 
 
@@ -44,6 +50,8 @@ h1, h2, h3, h4, h5, h6, p, li {
 	background-color: var(--sectioncolor);
 	margin: 8px;
 	flex: 1;
+	padding: 10px;
+	margin: 10px;
 }
 
 .leaderboard {
@@ -53,9 +61,10 @@ h1, h2, h3, h4, h5, h6, p, li {
 }
 
 .recently-completed-games {
-	background-color: var(--sectioncolor);
+	background-color: var(--pagecolor);
 	margin: 8px;
 	flex: 1;
+	width: 540px
 }
 
 
@@ -118,3 +127,27 @@ h1, h2, h3, h4, h5, h6, p, li {
 	font-size: x-large;
 }
 
+.table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: var(--pagecolor); 
+ }
+
+ .table-striped>tbody>tr:nth-child(even)>td, 
+.table-striped>tbody>tr:nth-child(even)>th {
+   background-color: var(--sectioncolor) 
+ }
+
+.lh-side {
+	min-width: 300px;
+}
+
+.table {
+	width: 100%;
+	max-width: 100%;
+	margin-bottom: 1rem;
+	border-collapse: collapse;
+	display: table;
+	text-indent: initial;
+	border-spacing: 2px;
+	border-color: grey;
+}
