--- a/CSS/Components/live_games.css
+++ b/CSS/Components/live_games.css
@@ -2,6 +2,7 @@
 	background-color: var(--pagecolor);
 	margin: 8px;
 	flex: 1;
+	min-height: 100vh;
 }
 
 .live-game {
@@ -90,6 +91,7 @@
 
 .left-align {
 	justify-content: left;
+	text-align: left;
 }
 
 .grid-container-team-1 {
