--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url("components/live_games.css");
+@import url("components/loader.css");
 
 :root{
 	--pagecolor:#080D1E;
@@ -64,7 +65,7 @@ p, th, td {
 	background-color: var(--pagecolor);
 	margin: 8px;
 	flex: 1;
-	width: 540px
+	min-width: 470px
 }
 
 
@@ -80,6 +81,8 @@ p, th, td {
 	border-radius: 50%;
 	height: 25px;
  	width: 25px;
+	min-width: 25px;
+	min-height: 25px;
 	text-align: center;
 	top: 50%;
   line-height: 25px;
