Improved positioning of the spectate button

--- a/CSS/Components/live_games.css
+++ b/CSS/Components/live_games.css
@@ -3,7 +3,9 @@
 	margin: 8px;
 	flex: 1;
 	min-height: 100vh;
-	min-width: 470px;
+	min-width: 450px;
+	border: 2px solid grey;
+	padding: 4px;
 }
 
 .live-game {
@@ -14,6 +16,7 @@
 	margin: 8px auto;
 	justify-content: space-evenly;
 	padding: 8px 8px;
+	position: relative;
 }
 
 .live-game * {
