--- a/CSS/Components/loader.css
+++ b/CSS/Components/loader.css
@@ -30,35 +30,35 @@ body, html {
 }
 
 .loader .bar1 {
-  background-color: #754fa0;
+  background-color: var(--p1color);
 }
 
 .loader .bar2 {
-  background-color: #09b7bf;
+  background-color: var(--p2color);
   -webkit-animation-delay: -0.7s;
   animation-delay: -0.7s;
 }
 
 .loader .bar3 {
-  background-color: #90d36b;
+  background-color: var(--p3color);
   -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
 }
 
 .loader .bar4 {
-  background-color: #f2d40d;
+  background-color: var(--p4color);
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
 
 .loader .bar5 {
-  background-color: #fcb12b;
+  background-color: var(--p5color);
   -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
 }
 
 .loader .bar6 {
-  background-color: #ed1b72;
+  background-color: var(--p6color);
   -webkit-animation-delay: -0.3s;
   animation-delay: -0.3s;
 }
