--- a/CSS/Components/live_games.css
+++ b/CSS/Components/live_games.css
@@ -86,6 +86,20 @@
 	display: flex;
 }
 
+.time-elapsed {
+	/* position: absolute; */
+	left: 8px;
+	top: 8px;
+	background-color: teal;
+	border-radius: 15px;
+	padding: 0px 4px;
+}
+
+.game-properties {
+	display: flex;
+	justify-content: center;
+}
+
 .right-align {
 	justify-content: right;
 	text-align: right;
