--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
-@import url("/components/live_games.css");
-@import url("/components/loader.css");
+@import url("/css/components/live_games.css");
+@import url("/css/components/loader.css");
 
 :root{
 	--pagecolor:#080D1E;
@@ -173,4 +173,215 @@ a {
   height: 50px;
   border-radius: 25px;
   margin: 0px 10px;
+}
+
+h1 {
+  color: red;
+}
+
+body, html {
+  background-color: #1c2020;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.loader {
+  margin: 0 auto;
+  width: 60px;
+  height: 50px;
+  text-align: center;
+  font-size: 10px;
+  top: 50%;
+  left: 50%;
+}
+
+.loader > div {
+  height: 100%;
+  width: 8px;
+  display: inline-block;
+  float: left;
+  margin-left: 2px;
+  -webkit-animation: delay 0.8s infinite ease-in-out;
+  animation: delay 0.8s infinite ease-in-out;
+}
+
+.loader .bar1 {
+  background-color: var(--p1color);
+}
+
+.loader .bar2 {
+  background-color: var(--p2color);
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+
+.loader .bar3 {
+  background-color: var(--p3color);
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+
+.loader .bar4 {
+  background-color: var(--p4color);
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+
+.loader .bar5 {
+  background-color: var(--p5color);
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+
+.loader .bar6 {
+  background-color: var(--p6color);
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+
+@-webkit-keyframes delay {
+  0%, 40%, 100% {
+    -webkit-transform: scaleY(0.05);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+  }
+}
+
+@keyframes delay {
+  0%, 40%, 100% {
+    transform: scaleY(0.05);
+    -webkit-transform: scaleY(0.05);
+  }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+  }
+}
+
+.display-none {
+  display: none;
+}
+
+.current-games {
+	background-color: var(--pagecolor);
+	margin: 8px;
+	flex: 1;
+	min-height: 100vh;
+	padding: 4px;
+}
+
+.live-game {
+	background-color: var(--sectioncolor);
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	margin: 8px auto;
+	justify-content: space-evenly;
+	padding: 8px 0px;
+	position: relative;
+}
+
+.live-game * {
+	margin: 0px 8px;
+}
+
+.live-game img {
+	width: 25px;
+	height: 25px;
+}
+
+.game-header {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+}
+
+.game-header img {
+	width: 25px;
+	height: 25px;
+}
+
+.elo {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+}
+
+.country {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+}
+
+#country-flag {
+	width: 25px;
+	height: 18px;
+}
+
+.game-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	max-width: 500px;
+	margin: 4px auto;
+}
+
+.game-time {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+	margin: 4px auto;
+}
+
+.team-game-header {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+}
+
+.team-game-player {
+	display: flex;
+	justify-content: center;
+	max-width: 500px;
+	margin: 4px auto;
+}
+
+.team-game-teams {
+	display: flex;
+}
+
+.time-elapsed {
+	/* position: absolute; */
+	left: 8px;
+	top: 8px;
+	background-color: teal;
+	border-radius: 15px;
+	padding: 0px 4px;
+}
+
+.game-properties {
+	display: flex;
+	justify-content: center;
+}
+
+.right-align {
+	justify-content: right;
+	text-align: right;
+}
+
+.left-align {
+	justify-content: left;
+	text-align: left;
+}
+
+.grid-container-team-1 {
+	display: grid;
+	grid-template-columns: 30px 30px 30px 150px;
+}
+
+.grid-container-team-2 {
+	display: grid;
+	grid-template-columns: 150px 30px 30px 30px;
 }
