--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,6 +16,11 @@
   <meta name="description" content="Profile of an AoE2 player"> 
 </head>
 <body>
-  <h1>Profile Page</h1>
+	<div class="container">
+		<h1>Profile Page</h1>
+		<a href="http://localhost:3000/api/auth/steam">Sign in</a>
+	</div>
+  
+
 </body>
 </html>
