--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GBAoe2.net</title>
-  <link rel="stylesheet" href="../style.css">
-  <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
-  <script type="module" src="../script.js" defer></script>
-  <script type="module" src="../functions.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
-  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;300&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
-  <meta name="description" content="Profile of an AoE2 player"> 
-</head>
+<%- include('./partials/staticHead.ejs') %>
 <body>
+  <div class="text-container">
     <h1>Oops. The page you're looking for doesn't exist</h1>
+    <a href="../" class="player-name">Go to Dashboard</a>
+  </div>
 </body>
 </html>
