--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,2 +1,16 @@
-<%- include('./partials/head.ejs') %>
+<%- include('./partials/staticHead.ejs') %>
 <%- include('./partials/nav.ejs') %>
+
+<div class="text-container">
+    <p class="light-weight">This website automatically refreshes every 2 minutes. Please message me on discord (Rhea#2574) 
+        if you have any questions. Data is sourced from AoE2.net APIs. Due to conditons from AoE2.net, 
+        only games started in the last 30 mins can be shown.
+        <i class="fa-brands fa-github"></i> <a href="https://github.com/sebnaylor/AoE2GB" target="_blank"
+        rel="noopener noreferrer">GitHub Repo</a>
+        </p>
+        <br>
+        <p class="light-weight">Age of Empires II: Definitive Edition © Microsoft Corporation. GBAoE2.net was created under 
+        Microsoft's <a href="https://www.xbox.com/en-US/developers/rules">Game Content Usage Rules</a>
+        using assets from Age of Empires II: Definitive Edition, and it is not endorsed by or affiliated with Microsoft.
+    </p>
+</div>
