--- a/views/partials/dashboardHead.ejs
+++ b/views/partials/dashboardHead.ejs
@@ -8,7 +8,7 @@
   <title>GBAoe2.net</title>
   <link rel="stylesheet" href="../style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
-  <script type="module" src="../profileScript.js" defer></script>
+  <script type="module" src="../dashboardScript.js" defer></script>
   <script type="module" src="../functions.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
@@ -16,15 +16,3 @@
   <script src="https://kit.fontawesome.com/25dfb2bacb.js" crossorigin="anonymous"></script>
   <meta name="description" content="The dashboard home of the GB Age of Empires 2 community. Find, view and spectate your clan-mates games."> 
 </head>
-<body>
-
-	<%- include('./partials/nav.ejs') %>
-	<div class="text-container">
-		<h1>Profile Page</h1>
-		<h2> <%= profile %> </h2>
-		<p>MORE DETAILS COMING SOON™ </p>
-	</div>
-  
-
-</body>
-</html>
