updated steam link

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
 			<span><a href="../profile/292104"><h3 class="nav-btn">Profile</h3></a></span>
 			<span><a href="../about"><h3 id="about-btn" class="nav-btn">About</h3></a></span>
 			<% if (user == null) {%> 
-			<span><a class="nav-btn" href="http://localhost:3000/api/auth/steam">
+			<span><a class="nav-btn" href="https://gbaoe2-test.herokuapp.com/api/auth/steam">
 				<img src="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/steam_sign_on.png">
 			</a></span>
 			<%} else { %>
