--- a/views/partials/dashboardHead.ejs
+++ b/views/partials/dashboardHead.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta http-equiv="refresh" content="120"> -->
+  <meta http-equiv="refresh" content="120">
   <title>GBAoe2.net</title>
   <link rel="stylesheet" href="../style.css">
   <link rel="icon" type="image/x-icon" href="https://aoe2gb.s3.eu-west-2.amazonaws.com/images/Arch.png">
